// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`'--skip' command line option overrides the '.only' run mode flag: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  - skip internal is string?
  - skip internal is number?
  + external is string?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      2 skipped, 1 passed, 3 total
Assertions: 2 skipped, 1 passed, 3 total
Duration:   <<timestamp>>

Ran tests not matching 'internal' in all test files.
"
`;

exports[`'--skip' command line option selects test group to run: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  internal
    - skip is string?
  - skip internal is number?
  + external is string?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      2 skipped, 1 passed, 3 total
Assertions: 2 skipped, 1 passed, 3 total
Duration:   <<timestamp>>

Ran tests not matching 'internal' in all test files.
"
`;

exports[`'--skip' command line option selects tests to run: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  - skip internal is string?
  - skip internal is number?
  + external is string?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      2 skipped, 1 passed, 3 total
Assertions: 2 skipped, 1 passed, 3 total
Duration:   <<timestamp>>

Ran tests not matching 'internal' in all test files.
"
`;

exports[`'--skip' command line option when '--only' command line option is specified: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  - skip internal is string?
  - skip internal is number?
  + external is string?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      2 skipped, 1 passed, 3 total
Assertions: 2 skipped, 1 passed, 3 total
Duration:   <<timestamp>>

Ran tests matching 'number' and not matching 'internal' in all test files.
"
`;

exports[`'--skip' command line option when search string is specified after the option: stdout 1`] = `
"uses TypeScript <<version>>

pass ./__typetests__/dummy.test.ts
  - skip internal is string?
  - skip internal is number?
  + external is string?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      2 skipped, 1 passed, 3 total
Assertions: 2 skipped, 1 passed, 3 total
Duration:   <<timestamp>>

Ran tests not matching 'internal' in test files matching 'dummy'.
"
`;

exports[`'--skip' command line option when search string is specified before the option: stdout 1`] = `
"uses TypeScript <<version>>

pass ./__typetests__/dummy.test.ts
  - skip internal is string?
  - skip internal is number?
  + external is string?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      2 skipped, 1 passed, 3 total
Assertions: 2 skipped, 1 passed, 3 total
Duration:   <<timestamp>>

Ran tests not matching 'internal' in test files matching 'dummy'.
"
`;
